# DirectX-11-Tutorial

./: .gitignore  README.md
Dx11Tutorials/: CMakeLists.txt
Dx11Tutorials/Dx11Tutorials/: CMakeLists.txt
Dx11Tutorials/Dx11Tutorials/engines/: CMakeLists.txt  Dx11Draw.h  Dx11Geo1.h  Dx11Init.h  Dx11Light.h  main.cpp  main_Dx11Draw.cpp  main_Dx11Geo1.cpp  main_Dx11Init.cpp  main_Dx11Light.cpp
Dx11Tutorials/Dx11Tutorials/includes/: DxUtils.h  GameTimer.cpp  GameTimer.h  GeometyGenerator.cpp  GeometyGenerator.h  Windows.cpp  Windows.h  ZekrosEngine.cpp  ZekrosEngine.h
Output/: Dx11Draw.exe.lnk  Dx11Init.exe.lnk  Dx11Init.ilk  cmake_install.cmake  goto.bat
Output/FX/: shader.fx
